# Crewai_research_agents

./: .env_sample  README.md  pyproject.toml
crew_modelling/: .gitignore
crew_modelling/src/crew_modelling/: crew.py  main.py
crew_modelling/src/crew_modelling/config/: agents.yaml  tasks.yaml
src/crew_modelling/: crew.py  main.py
src/crew_modelling/config/: agents.yaml  tasks.yaml
