[tool.poetry]
name = "crew_modelling"
version = "0.1.0"
description = "crew_modelling using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.70.1,<1.0.0" }


[tool.poetry.scripts]
crew_modelling = "crew_modelling.main:run"
run_crew = "crew_modelling.main:run"
train = "crew_modelling.main:train"
replay = "crew_modelling.main:replay"
test = "crew_modelling.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
